mdapioutput/objects/ProductLimit__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Limits</relationshipLabel>
        <relationshipName>Product_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Limits</relationshipLabel>
        <relationshipName>Product_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Period: End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsDeliveryAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTransferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LimitType__c</fullName>
        <label>Limit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_Units_per_Period__c</fullName>
        <label>Limit: Units per Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharma Product</label>
        <referenceTo>CTPHARMA__Product__c</referenceTo>
        <relationshipLabel>Product Limits</relationshipLabel>
        <relationshipName>Product_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Period: Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitsPerActivity__c</fullName>
        <label>Limit: Units per Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitsPerDay__c</fullName>
        <label>Limit: Units per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitsPerYear__c</fullName>
        <label>Limit: Units per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Limit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LimitType__c</columns>
        <columns>AccountId__c</columns>
        <columns>ContactId__c</columns>
        <columns>ProductId__c</columns>
        <columns>UserId__c</columns>
        <columns>UnitsPerActivity__c</columns>
        <columns>UnitsPerDay__c</columns>
        <columns>Limit_Units_per_Period__c</columns>
        <columns>UnitsPerYear__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIMIT-{0000}</displayFormat>
        <label>Product Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>